<resources>
    <string name="app_name">new app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="w_permission_denied">Permission Denied!</string>
    <string name="s_permission_request">Please Grant Phone Permission</string>
    <string name="e_error">Error occurred!</string>
    <string name="s_phone_permission">Please Grant Phone Permission!</string>
    <string name="e_phone_permission">Please Grant Phone Permission!</string>
    <string name="w_loading">Loading</string>
    <string name="w_permission_storage">\"Please Grant Storage Permission! \"</string>
    <string name="s_permission_location">\"Please Grant Location Permission! \"</string>
    <string name="s_permission_camera">\"Please Grant Camera Permission! \"</string>
    <string name="w_success">Success!</string>
    <string name="w_ok">OK</string>
    <string name="t_no_std_found">No standard Found</string>
    <string name="failed">Server Error</string>
    <string name="t_loading">Loading...</string>
    <string name="title_standard">Standard</string>
    <string name="title_subject">Subject</string>
    <string name="title_books">Books</string>
    <string name="t_edit_standard">Edit Standard Name</string>
    <string name="t_create_standard">Create New Standard</string>
    <string name="save">Save</string>
    <string name="hint_enter_std_name">Enter Name</string>
    <string name="t_no_sub_found">No Subject Found</string>
    <string name="t_deleting">Deleting...</string>
    <string name="t_are_you_sure">Are you sure?</string>
    <string name="s_wont_be_able_to_recover">won\'t be able to recover</string>
    <string name="t_deleted">Deleted</string>
    <string name="t_edit_subject">Edit Subject</string>
    <string name="t_no_book_found">No Books Available</string>
    <string name="hint_enter_book_link">Enter Book Link</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="novels">Novels</string>
    <string name="admin">Admin</string>
    <string name="video">Video</string>
    <string name="fav">Favourite</string>
    <string name="s_download_failed">Download Failed!</string>
    <string name="t_downloading">Downloading...</string>
    <string name="cannot_open_zip_file">Cannot Open Zip File Download First!</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="serach">Search</string>
    <string name="toast_alreadyadded">Item is Already Added to Favourite</string>


</resources>
