<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_standard">

    <fragment
        android:id="@+id/navigation_standard"
        android:name="com.fahim.newapp.ui.standard.StandardFragment"
        android:label="@string/title_standard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_subject"
        android:name="com.fahim.newapp.ui.subject.SubjectFragment"
        android:label="@string/title_subject"
        tools:layout="@layout/fragment_subject" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.fahim.newapp.ui.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_book" />
</navigation>
